        Reviewed by Adam.

http://bugs.webkit.org/show_bug.cgi?id=14442
        Adding a stop with value 1.0 to a gradient that has already been used has no effect

        Implement start and end stop handling differently so they are not
        in the color stop array.



Canonical link: https://commits.webkit.org/18786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24048 268f45cc-cd09-0410-ab3c-d52691b4dbfc